// Original file: src/proto/rental.proto


export interface RentalRequest {
  'dataInicial'?: (string);
  'dataFinal'?: (string);
  'modelo'?: (string);
  'cpf'?: (string);
}

export interface RentalRequest__Output {
  'dataInicial'?: (string);
  'dataFinal'?: (string);
  'modelo'?: (string);
  'cpf'?: (string);
}
